# simpleos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.txt  build.rs  build.rs-
examples/: allocator_test.rs  emulate.rs  no_std_buddy_alloc.rs  task_emulate.rs  test.rs
src/: allocator.rs  delay.rs  executor.rs  lib.rs  panic_handler.rs  yield_now.rs
src/bindings/: bindings.rs  bindings.rs.headers  bindings.rs.includes  mod.rs
src/console/: builtin_cmds.rs  cmd.rs  cmd_parser.rs  cmds.rs  console.rs  console_driver.rs  mod.rs  print.rs
src/driver/: cpu.rs  device.rs  lazy_init.rs  mod.rs  tty.rs
src/driver/fs/: fs.rs  fs_cmds.rs  fs_table.rs  mod.rs
src/driver/fs/littlefs/: mod.rs  note.txt
src/driver/fs/sfud/: mod.rs  sfud.c  sfud_cfg.h  sfud_def.h  sfud_port.c
src/driver/gpio/: dummy_gpio.rs  mod.rs
src/driver/i2c/: mod.rs
src/driver/mtd/: mod.rs
src/driver/mtd/sfud/: mod.rs  note.txt  sfud.c  sfud.h  sfud_cfg.h  sfud_def.h  sfud_flash_def.h  sfud_sfdp.c
src/driver/rtc/: hym8563.rs  mod.rs  rtc_driver.rs  rtc_hym8563.rs
src/driver/spi/: mod.rs
src/driver/systick/: mod.rs
src/driver/uart/: mod.rs  uart_buf.rs  uart_driver.rs
src/executor/: executor.rs  mod.rs  panic_handler.rs  runnable.rs  runner.rs
src/sys/: allocator.rs  allocator_cstdlib.rs  console.rs  executor.rs  join.rs  mod.rs  panic_handler.rs  print.rs  select.rs  sleep.rs  yield_now.rs
src/util/: convert.rs  crc16.rs  lazy.rs  mod.rs  ringbuf.rs  singleton.rs
