[package]
name = "simpleos"
version = "0.1.0"
edition = "2021"
description = "A Simple OS use for MCU, that implements single-threaded asynchronous runtime."
license = "MIT"
repository = "https://github.com/houxd/simpleos-rs"
homepage = "https://github.com/houxd/simpleos-rs"
documentation = "https://docs.rs/simpleos-rs"
keywords = ["embedded", "mcu", "no-std", "os", "async", "console"]
categories = ["no-std", "embedded::no-std"]
authors = ["houxd.g@gmail.com"]
exclude = []

[lib]
crate-type = ["lib"]

[features]
default = ["util", "panic-handler", "allocator"] # 使用内置的内存分配器, 调用C语言的malloc等函数
allocator = []     # 内置panic处理器为死循环
panic-handler = [] # 使用内置的panic处理器, 需要启用core库
util = []          # 启用实用工具功能, 例如时间处理等

[[example]]
name = "emulate"

[dependencies]
heapless = "0.9"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
