[package]
name = "simpleos"
version = "0.5.0"
edition = "2021"
description = "A Simple OS use for MCU, that implements single-threaded asynchronous runtime."
license = "MIT"
repository = "https://github.com/houxd/simpleos"
homepage = "https://github.com/houxd/simpleos"
documentation = "https://docs.rs/simpleos"
keywords = ["embedded", "mcu", "no-std", "async", "console"]
categories = ["no-std"]
authors = ["houxd.g@gmail.com"]
exclude = []

[lib]
crate-type = ["lib"]

[features]
default = ["util"]
util = []                                        # 启用实用工具功能, 例如时间处理等
allocator-cstdlib = []                           # 启用基于C标准库的内存分配器
panic-handler = []                               # 使用内置的panic处理器, 需要启用core库

[[example]]
name = "emulate"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1.89"

[dev-dependencies]
termion = "2.0"

[build-dependencies]
bindgen = "0.72"
anyhow = "1.0"
cc = "1.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true

[lints.rust]
unused_must_use = "warn"